# blind_test

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README  TODO  bootstrap
doc/: tree
lib/: 0001-Libs-Added-imgui-sfml-bindings-in-imgui.patch
src/: GraphicsEngine.cc  GraphicsEngine.hh  InputsManager.cc  InputsManager.hh  imgui.hh  main.cc
src/tools/: Debug.cc  Debug.hh  Debug.hxx  OptionsParser.cc  OptionsParser.hh  Random.cc  Random.hh
